# PID-agent

./: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
config/: llm_config.yaml  llm_settings.py  settings.py
core/agent/: deepseek_demo.py  pid_agent.py  tools.py
core/utils/: data_logger.py  data_store.py  llm.py  llm_test.py  pid_optimizer.py
data/: system.db
data/vectorstore/: chroma.sqlite3
fastapi_app/: main.py
fastapi_app/config/: __init__.py
fastapi_app/routes/: __init__.py  device_router.py  optimization_router.py
fastapi_app/utils/: data_store.py  serial_comm.py
streamlit_app/: main.py
tests/: mock_pid_system.py  mock_serial.py  test_integration.py
