[project]
name = "pid-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-deepseek>=0.0.3",
    "langchain>=0.3.17",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "langchain-community>=0.3.16",
    "langchain-deepseek-official>=0.1.0",
    "matplotlib>=3.10.0",
]
